--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -24,3 +24,10 @@ jobs:
         uses: golangci/golangci-lint-action@v8
         with:
           version: v2.1
+      - name: Run govulncheck
+        steps:
+      - id: govulncheck
+        uses: golang/govulncheck-action@v1
+        with:
+        go-version-input: 1.23.3
+        go-package: ./...
