--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -25,9 +25,18 @@ jobs:
         with:
           version: v2.1
       - name: Run govulncheck
-        steps:
+        
+  govulncheck_job:
+    runs-on: ubuntu-latest
+    name: Run govulncheck
+    steps:
       - id: govulncheck
         uses: golang/govulncheck-action@v1
         with:
-        go-version-input: 1.23.3
-        go-package: ./...
+           go-version-input: 1.23.3
+           go-package: ./...
+     
+     
+     
+     
+     
