go vulnerability check added thrice

--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -1,4 +1,5 @@
-name: golangci-lint
+name: golangci-lint-check
+
 on:
   push:
     branches:
@@ -13,30 +14,28 @@ permissions:
 
 jobs:
   golangci:
-    name: lint
+    name: Lint Code
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
       - uses: actions/setup-go@v5
         with:
           go-version: stable
-      - name: golangci-lint
+      - name: Run golangci-lint
         uses: golangci/golangci-lint-action@v8
         with:
           version: v2.1
-      - name: Run govulncheck
-        
+
   govulncheck_job:
-    runs-on: ubuntu-latest
     name: Run govulncheck
+    runs-on: ubuntu-latest
     steps:
-      - id: govulncheck
+      - uses: actions/checkout@v4
+      - uses: actions/setup-go@v5
+        with:
+          go-version: stable
+      - name: Run govulncheck
         uses: golang/govulncheck-action@v1
         with:
-           go-version-input: 1.23.3
-           go-package: ./...
-     
-     
-     
-     
-     
+          go-version-input: 1.23.3
+          go-package: ./...
